src/objects/Tier_Level__c/Tier_Level__c.object-meta.xml
<CustomObject>
    <label>Tier Level</label>
    <nameField>
        <displayFormat>TN-{00000000}</displayFormat>
        <label>Tier Level Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier Level</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>