src/objects/Tier_Level__c/fields/Exposed_Cost_Max_Year_K__c.field-meta.xml
<CustomField>
    <fullName>Exposed_Cost_Max_Year_K__c</fullName>
    <label>Exposed Cost Max/Year (K$)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>