src/objects/Tier_Level__c/fields/Front_End_Loss__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Loss__c</fullName>
    <label>Front End Loss (K$)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>