src/objects/Tier_Level__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>