src/objects/Tier_Level__c/fields/X5_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X5_Year_Revenue__c</fullName>
    <label>Standard 5 Year Revenue (K$)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>